--- a/assets/style-sheet.css
+++ b/assets/style-sheet.css
@@ -67,6 +67,8 @@ pre {
     padding: 10px;
     line-height: 1.5;
     background-size: cover;
+    /* unable to get the background to fill the box */
+    user-select:all;
 }
 
 h1, header p, h3 {
@@ -80,10 +82,47 @@ h2 {
     border-radius: 10px;
     padding: 10px;
     width: 90%;
-    color:var(--main-text-color);
     /* don't think width: 90% is the right way to stretch the border regardless of how much text */
+    color:var(--main-text-color);
 }
 
 p {
     padding-top: 10px;
 }
+
+.grid-area h2 {
+    border-radius: 8px;
+    transition: all 0.5s ease-in-out;
+    }
+    
+    .grid-area:hover,
+    .grid-area:hover h2 {
+        box-shadow: inset 0px 0px 8px
+    rgba(232, 102, 236, 1), 0 0 15px
+    rgba(232, 102, 236, 1);
+    }
+
+@media screen and (max-width: 992px) {
+        .main-grid {
+            grid-template-rows: repeat(6, 1fr);
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas: 
+            "flexbox-row flexbox-column" 
+            "CSS-grid-layout linear-gradients" 
+            "box-transition-glow overlay-card-with-title";
+            }
+    }
+
+@media screen and (max-width: 768px) {
+    .main-grid {
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "flexbox-row" 
+        "flexbox-column" 
+        "CSS-grid-layout" 
+        "linear-gradients" 
+        "box-transition-glow"
+        "overlay-card-with-title";
+        }
+    }
